bugfix(stack-item): minor fix to overflow

--- a/src/components/StackView/StackView.css
+++ b/src/components/StackView/StackView.css
@@ -23,6 +23,7 @@
   text-align: center;
   padding: 5px;
   border-radius: 3px;
+  overflow: hidden;
 
   color: var(--black);
   background-color: var(--light-gray);
